--- a/SchedulerSimulation.vcxproj
+++ b/SchedulerSimulation.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="timeInfo.txt" />
+    <Text Include="timeInfo2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
